--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#" style="font-size: 12px;" onclick="generate_spam(50)">make 50</a><br>
             <a href="#" style="font-size: 12px;" onclick="generate_spam(100)">make 100</a><br>
             
-            <a href="#" style="font-size: 12px;" onclick="generate_spam(firstlevel.length * secondlevel.length)">make statistically every combo (unlikely, lags)</a>
+            <a href="#" style="font-size: 12px;" id="genAll" onclick="generate_spam(firstlevel.length * secondlevel.length)">make (unlikely, lags)</a>
         </div>
         <br>
         <br>
